# analytics-engineering-modern-stack

./: .gitignore  AGENTS.md  README.md  main.py  manage.py  pyproject.toml
.github/workflows/: ci-cd.yml
analytics_system/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
analytics_system/.dagster_home/: dagster.yaml
analytics_system/src/analytics_system/: constants.py  definitions.py
analytics_system/src/analytics_system/defs/dbt_assets/: assets.py
analytics_system/src/analytics_system/defs/dbt_daily/: defs.yaml  template_vars.py
analytics_system/src/analytics_system/defs/filesystem_duckdb_ingest/: loads.py
assignments/module5/: README.md
assignments/module5/answers/call_center/models/staging/: stg_calls.sql  stg_crm.sql  stg_surveys.sql
assignments/module5/stubs/call_center/models/staging/: stg_calls.sql  stg_crm.sql  stg_surveys.sql
assignments/module6/: README.md
assignments/module6/answers/call_center/models/data_marts/: mart_first_call_resolution.sql  mart_surveys.sql
assignments/module6/stubs/call_center/models/data_marts/: mart_first_call_resolution.sql  mart_surveys.sql
assignments/module8/: README.md
assignments/module8/answers/call_center/models/ops_analysis/: daily_agent_manager_metrics.sql  daily_agent_metrics.sql  monthly_agent_manager_metrics.sql  monthly_agent_manger_metrics.sql  monthly_agent_metrics.sql  monthly_manager_metrics.sql
assignments/module8/stubs/call_center/models/ops_analysis/: daily_agent_manager_metrics.sql  daily_agent_metrics.sql  monthly_agent_manger_metrics.sql  monthly_agent_metrics.sql  monthly_manager_metrics.sql
assignments/module9/: README.md
assignments/module9/answers/call_center/models/data_marts/: properties.yml
assignments/module9/answers/call_center/models/ops_analysis/: properties.yml
assignments/module9/answers/call_center/models/staging/: properties.yml
assignments/module9/stubs/call_center/models/data_marts/: properties.yml
assignments/module9/stubs/call_center/models/ops_analysis/: properties.yml
assignments/module9/stubs/call_center/models/staging/: properties.yml
call_center/: .gitignore  AGENTS.md  README.md  dbt_project.yml  profiles.yml.example
call_center/macros/: generate_schema_name.sql
call_center/models/: _groups.yml
call_center/models/data_marts/: data_marts.yml  mart_calls.sql  mart_crm.sql  mart_crm_callbacks.sql  mart_surveys.sql  properties.yml
call_center/models/ops_analysis/: daily_agent_call_metrics.sql  daily_agent_crm_metrics_source.sql  daily_agent_manager_metrics.sql  daily_agent_metrics.sql  daily_agent_survey_metrics.sql  monthly_agent_call_metrics.sql  monthly_agent_crm_metrics.sql  monthly_agent_manager_metrics.sql  monthly_agent_metrics.sql  monthly_manager_call_metrics.sql  monthly_manager_crm_metrics.sql  ops_analysis.yml  properties.yml
call_center/models/seed_views/: properties.yml  seed_views.yml  test_agent_assignments.sql
call_center/models/sources/: sources.yml
call_center/models/staging/: properties.yml  staging.yml  stg_calls.sql  stg_crm.sql  stg_surveys.sql
call_center/seeds/: agent_assignments.csv  agents.csv  customers.csv  managers.csv  properties.yml
data_generation/: call_center_simulation.py  constants.py  helpers.py
data_generation/tests/: test_determinism.py
data_vis_metabase/: .gitignore  Dockerfile  README.md  docker-compose.yml
mds/: AGENTS.md  README.md  pyproject.toml
mds/src/mds/: cli.py
mds/src/mds/data_generation/: call_center_simulation.py  helpers.py
mds/src/mds/data_generation/tests/: test_determinism.py
notes/: TODOS.md  metabase-dashboard.md
scripts/: warehouse-startup-template.sql
