[project]
name = "analytics_system"
requires-python = "==3.13.5"
version = "0.1.0"
dependencies = [
    "dagster==1.12.15",
    "dagster-dbt==0.28.15",
    "dagster-dlt==0.28.15",
    "dbt-duckdb==1.9.6",
    "dlt[duckdb]==1.17.1",
    "pyarrow==21.0.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "analytics_system"
registry_modules = [
    "analytics_system.components.*",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
[tool.ruff]
line-length = 120



